update w new project

--- a/src/index.html
+++ b/src/index.html
@@ -278,6 +278,51 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">YouTube Timestamp Extension</h3>
+                <div>
+                  <p class="mb-4">
+                    I programming a Chrome extension  using the Storage API to allow users to save timestamps 
+                    of a YouTube video as they view it and return back to video at the saved timestamps. The
+                    core functionality is programmed in <strong>Javascript</strong> and the popup element is 
+                    coded in <strong>HTML/CSS</strong>.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://github.com/mrapi00/Timestamp-Extension"
+                >
+                  Github Link
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/extension.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
                 <h3 class="project-wrapper__text-title">LC3 Instruction Set Computer</h3>
                 <div>
                   <p class="mb-4">
