--- a/src/index.html
+++ b/src/index.html
@@ -517,7 +517,7 @@
                 <strong>COS333 </strong> Full-Stack Programming Techniques (Python, SQL, HTML, CSS, Javascript)<br>
                 <strong>COS418 </strong> Distributed Systems (Go) <br>
                 <strong>COS423 </strong> Theory of Algorithms <br>
-                <strong>COS302 </strong> Mathematics for Machine Learning (Python) <br>
+                <strong>COS316 </strong> Computer System Design (Go) <br>
                 <strong>COS324 </strong> Intro Machine Learning (Python)<br>
                 <strong>COS226 </strong> Algorithms and Data Structures (Java)<br>
                 <strong>COS217 </strong> Systems Programming (C, x86 Assembly)<br>
