--- a/src/index.html
+++ b/src/index.html
@@ -236,7 +236,7 @@
                 <h3 class="project-wrapper__text-title">YouTube Timestamp Extension</h3>
                 <div>
                   <p class="mb-4">
-                    I programming a Chrome extension  using the Chrome Storage API to allow users to save timestamps 
+                    I programmed a Chrome extension  using the Chrome Storage API to allow users to save timestamps 
                     of a YouTube video as they view it and return back to video at the saved timestamps. The
                     core functionality is programmed in <strong>Javascript</strong> and the popup element is 
                     coded in <strong>HTML/CSS</strong>.
@@ -327,7 +327,7 @@
                 <h3 class="project-wrapper__text-title">LC3 Instruction Set Computer</h3>
                 <div>
                   <p class="mb-4">
-                    I programming a microprocessor in <strong> Verilog </strong>that implements the LC3 
+                    I programmed a microprocessor in <strong> Verilog </strong>that implements the LC3 
                     instruction set, a 16-bit processor with a simple but versatile instruction set. This processor is Turing 
                     complete and is a full-fledged stored program computer. A description of the assembly functions my computer implements
                     can be found <a rel="noreferrer" href="assets/LC3ISA.pdf" target="_blank"
