--- a/src/index.html
+++ b/src/index.html
@@ -516,7 +516,7 @@
               <p class="about-wrapper__info-text" style="line-height: 3; display: inline-block; text-align: left">
                 <strong>COS333 </strong> Full-Stack Programming Techniques (Python, SQL, HTML, CSS, Javascript)<br>
                 <strong>COS418 </strong> Distributed Systems (Go) <br>
-                <strong>ECE396 </strong> Quantum Computing and Algorithms (Python) <br>
+                <strong>COS396 </strong> Quantum Computing and Algorithms (Python) <br>
                 <strong>COS316 </strong> Computer System Design (Go) <br>
                 <strong>COS324 </strong> Intro Machine Learning (Python)<br>
                 <strong>COS226 </strong> Algorithms and Data Structures (Java)<br>
