--- a/src/index.html
+++ b/src/index.html
@@ -102,13 +102,9 @@
                 and pursuing a minor in Statistics and Machine Learning. 
               </p>
               <p class="about-wrapper__info-text">
-                My relevant work experience includes 
-                being a <em>Software Engineering Intern</em> at L3Harris Technologies, <em>Software Developer Research Assistant</em> at Princeton's Intelligence and Adaptation Lab, an 
-                <em>Algorithms & Data Structures Grader</em> for Princeton's Computer Science Department, and <em> a Data 
-                Science Intern </em> at the Centers for Disease Control and Prevention (CDC). On campus, I'm involved as a 
-                <em>software engineer</em> on The Daily Princetonian (school newspaper), and <em>software subteam lead</em> on 
-                Princeton Rocketry Club. I am passionate about <strong> software engineering</strong> as a career, because I 
-                love programming, problem solving, and creating an impact through software development!
+                I am passionate about <strong> software engineering</strong> as a career, because I 
+                love programming, problem solving, and creating an impact through software development! You 
+                can find me resume below.
               </p>
 
               <p class="about-wrapper__info-text">
@@ -514,6 +510,8 @@
           <div class="col-md-12 col-sm-12">
             <div class="about-wrapper__info load-hidden" >
               <p class="about-wrapper__info-text" style="line-height: 3; display: inline-block; text-align: left">
+                <strong>COS461 </strong> Computer Networks (Go) <br>
+                <strong>COS484 </strong> Natural Language Processing (Python) <br>
                 <strong>COS333 </strong> Full-Stack Programming Techniques (Python, SQL, HTML, CSS, Javascript)<br>
                 <strong>COS418 </strong> Distributed Systems (Go) <br>
                 <strong>COS396 </strong> Quantum Computing and Algorithms (Python) <br>
@@ -522,7 +520,8 @@
                 <strong>COS226 </strong> Algorithms and Data Structures (Java)<br>
                 <strong>COS217 </strong> Systems Programming (C, x86 Assembly)<br>
                 <strong>COS306 </strong> Contemporary Logic Design (Verilog)<br>
-                <strong>COS240 </strong> Discrete Mathematics (LaTeX)<br>
+                <strong>COS445 </strong> Economics and Computing <br>
+                <strong>COS240 </strong> Discrete Mathematics <br>
                 <strong>COS126 </strong> Introductory Java Programming (Java)<br>
               </p>
               
@@ -553,9 +552,9 @@
           <div class="col-md-8 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text" style=" text-align: left; line-height: 2;">
-                <strong>Languages:</strong> Java, Python, C, HTML, CSS, Javascript, Typescript, SQL, R, Verilog <br>
-                <strong>Frameworks/Libaries:</strong> Flask, Bootstrap, Node.js, jQuery, SQLAlchemy,  NumPy, PyQt5 <br>
-                <strong>Tools:</strong> PostgreSQL, Google Firebase, Git/GitHub, Heroku
+                <strong>Languages:</strong> Java, Python, C, HTML, CSS, Javascript, SQL, R, Verilog <br>
+                <strong>Frameworks/Libaries:</strong> React.js, Flask, Bootstrap, Node.js, jQuery, SQLAlchemy,  NumPy, PyQt5 <br>
+                <strong>Tools:</strong> GraphQL, PostgreSQL, Google Firebase, Git/GitHub, Heroku
               </p>
             </div>
           </div>
