--- a/src/index.html
+++ b/src/index.html
@@ -49,9 +49,9 @@
       <div class="container">
         
         <h1 class="hero-title load-hidden">
-          Hi! My name is <span class="text-color-main">Mahmudul Rapi.</span>
+          <span class="text-color-main">Mahmudul Rapi</span> Portfolio Website
           <br />
-          I'm an aspiring Software Engineer.
+          CS @ Princeton '24
         </h1>
 
         <div class="col-md-12 col-sm-6">
@@ -99,12 +99,10 @@
               </p>
               <p class="about-wrapper__info-text">
                 I'm a junior at Princeton University studying <strong> Computer Science </strong>
-                and pursuing a minor in Statistics and Machine Learning. 
-              </p>
-              <p class="about-wrapper__info-text">
-                I am passionate about <strong> software engineering</strong> as a career, because I 
+                and pursuing a minor in Statistics and Machine Learning. I am passionate about <strong> 
+                software engineering</strong> as a career, because I 
                 love programming, problem solving, and creating an impact through software development! You 
-                can find me resume below.
+                can find my resume below.
               </p>
 
               <p class="about-wrapper__info-text">
