--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
                 class="rounded shadow-lg img-fluid"
                 height="auto"
                 width="300px"
-                src="assets/profile.jpg"
+                src="assets/profile.png"
                 alt="Profile Image"
               />
             </div>
@@ -98,11 +98,10 @@
                 My name is Mahmudul and I'm from NYC!
               </p>
               <p class="about-wrapper__info-text">
-                I'm a junior at Princeton University studying <strong> Computer Science </strong>
-                and pursuing a minor in Statistics and Machine Learning. I am passionate about <strong> 
-                software engineering</strong> as a career, because I 
-                love programming, problem solving, and creating an impact through software development! You 
-                can find my resume below.
+                I'm a senior at Princeton University studying <strong> Computer Science </strong>
+                and pursuing a minor in Robotics and Intelligent Systems. I am passionate about <strong> 
+                software engineering</strong> as a career, because I love programming, problem solving, 
+                and creating an impact through software development! You can find my resume below.
               </p>
 
               <p class="about-wrapper__info-text">
@@ -139,7 +138,7 @@
                 <h3 class="project-wrapper__text-title">TigerClimb</h3>
                 <div>
                   <p class="mb-4">
-                    For my Advanced Programming Techniques class, I worked on a semester-long web application in a group of 5 called <em>TigerClimb</em>, 
+                    I worked on a semester-long web application in a group of 4 called <em>TigerClimb</em>, 
                     which is built using <strong>Python and Flask</strong> (server-side), <strong>HTML/CSS/Javascript</strong> (client-side), and <strong>PostgreSQL</strong> (database).
                     Our web app allows the hundreds of Princeton students involved with the <em>Princeton Climbing Wall</em> to query climbing routes, add favorite routes, and comment
                     on routes. Admins are able to use our built graphical user interface to add new routes and set holds for a given route. 
@@ -413,7 +412,7 @@
                 <h3 class="project-wrapper__text-title">Power Electronics Java Library</h3>
                 <div>
                   <p class="mb-4">
-                    While taking a class in Power Electronics, I programmed my own power electronics library in <strong>Java</strong> containing 
+                    I programmed my own power electronics library in <strong>Java</strong> containing 
                     various power electronic topologies (diode-rectifier,
                     buck converter, boost converter, flyback converter), user-interactive to ask for circuit parameters, 
                     and computes the output current and output voltage, and ripple inductor current, ripple capacitor
@@ -509,18 +508,21 @@
             <div class="about-wrapper__info load-hidden" >
               <p class="about-wrapper__info-text" style="line-height: 3; display: inline-block; text-align: left">
                 <strong>COS461 </strong> Computer Networks (Go) <br>
-                <strong>COS484 </strong> Natural Language Processing (Python) <br>
-                <strong>COS333 </strong> Full-Stack Programming Techniques (Python, SQL, HTML, CSS, Javascript)<br>
+                <strong>COS461 </strong> Computer Architecture (C++) <br>
                 <strong>COS418 </strong> Distributed Systems (Go) <br>
-                <strong>COS396 </strong> Quantum Computing and Algorithms (Python) <br>
                 <strong>COS316 </strong> Computer System Design (Go) <br>
-                <strong>COS324 </strong> Intro Machine Learning (Python)<br>
+                <strong>COS346 </strong> Robotics (Python) <br>
+                <strong>COS470 </strong> Principles of Blockchains (Rust) <br>
+                <strong>COS343 </strong> Algorithms in BioInformatics  (Python) <br>
+                <strong>COS333 </strong> Full-Stack Programming Techniques (Python, SQL, HTML, CSS, Javascript)<br>
+                <strong>COS396 </strong> Quantum Computing (Python) <br>
+                <strong>COS324 </strong> Machine Learning (Python)<br>
                 <strong>COS226 </strong> Algorithms and Data Structures (Java)<br>
                 <strong>COS217 </strong> Systems Programming (C, x86 Assembly)<br>
                 <strong>COS306 </strong> Contemporary Logic Design (Verilog)<br>
                 <strong>COS445 </strong> Economics and Computing <br>
                 <strong>COS240 </strong> Discrete Mathematics <br>
-                <strong>COS126 </strong> Introductory Java Programming (Java)<br>
+                <strong>COS126 </strong> Intro Java Programming (Java)<br>
               </p>
               
             </div>
@@ -611,7 +613,7 @@
 
         <hr />
         <p class="footer__text">
-          © 2022 - Website by
+          © 2023 - Website by
           <a rel="noreferrer" href="https://github.com/mrapi00" target="_blank"
             >Mahmudul Rapi</a
           >
