--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
         <h1 class="hero-title load-hidden">
           <span class="text-color-main">Mahmudul Rapi</span> Portfolio Website
           <br />
-          CS @ Princeton '24
+          Computer Science Student @ Princeton
         </h1>
 
         <div class="col-md-12 col-sm-6">
